[Product List] Fix widh status col, fix alignment center th

--- a/assets/_table.scss
+++ b/assets/_table.scss
@@ -12,15 +12,17 @@
 	}
 
 	.info-column {
+    text-align: center;
 		width: 50px;
 	}
 
 	.image-column {
+    text-align: center;
 		width: 50px;
 	}
 
 	.status-column {
-		width: 140px;	
+		width: 150px;	
 	}
 
 	.live-column {
